// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`standard form serialize should serialize all component types 1`] = `
Array [
  Object {
    "key": "test",
    "tag": "Asset",
  },
  Object {
    "key": "testBackground",
    "tag": "Image",
    "universalKey": undefined,
  },
  Object {
    "description": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "Vortex Desc",
          },
        },
      ],
      "data": Object {
        "tag": "Description",
      },
    },
    "exits": Array [],
    "key": "testRoom",
    "name": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "Vortex",
          },
        },
      ],
      "data": Object {
        "tag": "Name",
      },
    },
    "shortName": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "Vortex",
          },
        },
      ],
      "data": Object {
        "tag": "ShortName",
      },
    },
    "summary": Object {
      "children": Array [],
      "data": Object {
        "tag": "Summary",
      },
    },
    "tag": "Room",
    "themes": Array [],
    "universalKey": undefined,
  },
  Object {
    "description": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "A tower built of white sandstone blocks, with an ornate clock set on the northern face.",
          },
        },
      ],
      "data": Object {
        "tag": "Description",
      },
    },
    "key": "testFeature",
    "name": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "Clocktower",
          },
        },
      ],
      "data": Object {
        "tag": "Name",
      },
    },
    "tag": "Feature",
    "universalKey": undefined,
  },
  Object {
    "description": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "There is so much to know!",
          },
        },
      ],
      "data": Object {
        "tag": "Description",
      },
    },
    "key": "testKnowledge",
    "name": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "Learn",
          },
        },
      ],
      "data": Object {
        "tag": "Name",
      },
    },
    "tag": "Knowledge",
    "universalKey": undefined,
  },
  Object {
    "images": Array [
      Object {
        "children": Array [],
        "data": Object {
          "key": "testBackground",
          "tag": "Image",
        },
      },
    ],
    "key": "testMap",
    "name": Object {
      "children": Array [],
      "data": Object {
        "tag": "Name",
      },
    },
    "positions": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "tag": "Position",
              "x": 0,
              "y": 100,
            },
          },
        ],
        "data": Object {
          "key": "testRoom",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
    ],
    "tag": "Map",
    "themes": Array [],
    "universalKey": undefined,
  },
  Object {
    "description": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "The door opens!",
          },
        },
      ],
      "data": Object {
        "tag": "Description",
      },
    },
    "key": "openDoor",
    "rooms": Array [
      Object {
        "children": Array [],
        "data": Object {
          "key": "testRoom",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
    ],
    "tag": "Message",
    "universalKey": undefined,
  },
  Object {
    "key": "openDoorMoment",
    "messages": Array [
      Object {
        "children": Array [],
        "data": Object {
          "key": "openDoor",
          "tag": "Message",
        },
      },
    ],
    "tag": "Moment",
    "universalKey": undefined,
  },
  Object {
    "default": "false",
    "key": "open",
    "tag": "Variable",
    "universalKey": undefined,
  },
  Object {
    "key": "closed",
    "src": "!open",
    "tag": "Computed",
    "universalKey": undefined,
  },
  Object {
    "key": "toggleOpen",
    "src": "open = !open",
    "tag": "Action",
    "universalKey": undefined,
  },
]
`;

exports[`standard form serialize should serialize universal keys 1`] = `
Array [
  Object {
    "key": "test",
    "tag": "Asset",
  },
  Object {
    "description": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "Vortex Desc",
          },
        },
      ],
      "data": Object {
        "tag": "Description",
      },
    },
    "exits": Array [],
    "key": "testRoom",
    "name": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "Vortex",
          },
        },
      ],
      "data": Object {
        "tag": "Name",
      },
    },
    "shortName": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "Vortex",
          },
        },
      ],
      "data": Object {
        "tag": "ShortName",
      },
    },
    "summary": Object {
      "children": Array [],
      "data": Object {
        "tag": "Summary",
      },
    },
    "tag": "Room",
    "themes": Array [],
    "universalKey": "ROOM#UUID",
  },
  Object {
    "description": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "A tower built of white sandstone blocks, with an ornate clock set on the northern face.",
          },
        },
      ],
      "data": Object {
        "tag": "Description",
      },
    },
    "key": "testFeature",
    "name": Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "tag": "String",
            "value": "Clocktower",
          },
        },
      ],
      "data": Object {
        "tag": "Name",
      },
    },
    "tag": "Feature",
    "universalKey": "FEATURE#UUID",
  },
]
`;
